added profile image uploader

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,23 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+
+div.vicp-preview {
+  width: 170px !important;
+  height: 270px !important;
+}
+
+div.vicp-preview-item.vicp-preview-item-circle {
+  width: 170px !important;
+  height: 170px !important;
+}
+
+.vicp-preview-item.vicp-preview-item-circle img {
+  width: 160px !important;
+  height: 160px !important;
+}
+
+.vicp-preview-item.vicp-preview-item-circle span {
+  bottom: -30px !important;
+}
