--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -31,3 +31,9 @@ div.vicp-preview-item.vicp-preview-item-circle {
 .vicp-preview-item.vicp-preview-item-circle span {
   bottom: -30px !important;
 }
+
+/* .v-list__group__header--active .v-list__group__header__append-icon .v-icon,
+.v-list__group__header--active.v-list__group__header--sub-group .v-list__group__header__prepend-icon .v-icon {
+  -webkit-transform: rotate(-90deg) !important;
+  transform: rotate(-90deg) !important;
+} */
