bug fixes and added more tooltips

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -122,3 +122,7 @@ div.vicp-preview-item.vicp-preview-item-circle {
 .no-break-word {
   word-break: initial !important;
 }
+
+.custom-list-avatar {
+  overflow: initial !important;
+}
