updated user preferences

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -126,3 +126,7 @@ div.vicp-preview-item.vicp-preview-item-circle {
 .custom-list-avatar {
   overflow: initial !important;
 }
+
+.v-radio > .v-label {
+  max-width: 100%;
+}
