layout changes: badge update, filter color and highlighting update

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -130,3 +130,9 @@ div.vicp-preview-item.vicp-preview-item-circle {
 .v-radio > .v-label {
   max-width: 100%;
 }
+
+.v-badge__badge .v-icon {
+  font-size: 17px !important;
+  inset: calc(100% - 14px) auto auto calc(100% - 14px);
+  color: #827717  !important;
+}
